fr.n7.stl/src/fr/n7/stl/minijava/parser/MiniJavaParser.java
// Generated from MiniJavaParser.g4 by ANTLR 4.13.1

package fr.n7.stl.minijava.parser;
import java.io.IOException;
import java.io.File;
import java.io.FileInputStream;
import java.io.PrintWriter;
import java.io.IOException;
import fr.n7.stl.minic.ast.*;
import fr.n7.stl.minic.ast.expression.*;
import fr.n7.stl.minic.ast.expression.accessible.*;
import fr.n7.stl.minic.ast.expression.allocation.*;
import fr.n7.stl.minic.ast.expression.assignable.*;
import fr.n7.stl.minic.ast.expression.value.*;
import fr.n7.stl.minic.ast.instruction.*;
import fr.n7.stl.minic.ast.instruction.declaration.*;
import fr.n7.stl.minic.ast.scope.*;
import fr.n7.stl.minic.ast.type.*;
import fr.n7.stl.minic.ast.type.declaration.*;
import fr.n7.stl.util.*;
import fr.n7.stl.tam.ast.*;
import fr.n7.stl.tam.ast.impl.*;
import fr.n7.stl.minijava.ast.type.declaration.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MiniJavaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Egal=1, AccoladeOuvrante=2, AccoladeFermante=3, ParentheseOuvrante=4, 
		ParentheseFermante=5, CrochetOuvrant=6, CrochetFermant=7, Point=8, PointInterrogation=9, 
		DeuxPoint=10, Virgule=11, PointVirgule=12, Afficher=13, Si=14, Sinon=15, 
		Retour=16, TantQue=17, Nouveau=18, Classe=19, Herite=20, Public=21, Prive=22, 
		DeClasse=23, Definitif=24, Moi=25, Super=26, MethodePrincipale=27, Abstrait=28, 
		Protege=29, Asterisque=30, Oblique=31, PourCent=32, Plus=33, Moins=34, 
		DoubleBarre=35, DoubleEsperluette=36, PointExclamation=37, Inferieur=38, 
		Superieur=39, InferieurEgal=40, SuperieurEgal=41, DoubleEgal=42, ExclamationEgal=43, 
		Esperluette=44, TypeEntier=45, TypeFlottant=46, TypeBooleen=47, TypeCaractere=48, 
		TypeChaine=49, TypeVide=50, Vrai=51, Faux=52, Nul=53, Caractere=54, Chaine=55, 
		Underscore=56, Identificateur=57, Entier=58, Flottant=59, CommentaireLigne=60, 
		CommentaireBloc=61, WS=62;
	public static final int
		RULE_programme = 0, RULE_classes = 1, RULE_classe = 2, RULE_principale = 3, 
		RULE_declaration = 4, RULE_elements = 5, RULE_accessRight = 6, RULE_element = 7, 
		RULE_attribut = 8, RULE_methode = 9, RULE_signature = 10, RULE_constructeur = 11, 
		RULE_bloc = 12, RULE_parametres = 13, RULE_parametre = 14, RULE_instruction = 15, 
		RULE_atomique = 16, RULE_type = 17, RULE_affectable = 18, RULE_expressions = 19, 
		RULE_arguments = 20, RULE_expression = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"programme", "classes", "classe", "principale", "declaration", "elements", 
			"accessRight", "element", "attribut", "methode", "signature", "constructeur", 
			"bloc", "parametres", "parametre", "instruction", "atomique", "type", 
			"affectable", "expressions", "arguments", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'{'", "'}'", "'('", "')'", "'['", "']'", "'.'", "'?'", 
			"':'", "','", "';'", "'print'", "'if'", "'else'", "'return'", "'while'", 
			"'new'", "'class'", "'extends'", "'public'", "'private'", "'static'", 
			"'final'", "'this'", "'super'", "'main'", "'abstract'", "'protected'", 
			"'*'", "'/'", "'%'", "'+'", "'-'", "'||'", "'&&'", "'!'", "'<'", "'>'", 
			"'<='", "'>='", "'=='", "'!='", "'&'", "'int'", "'float'", "'boolean'", 
			"'char'", "'String'", "'void'", "'true'", "'false'", "'null'", null, 
			null, "'_'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Egal", "AccoladeOuvrante", "AccoladeFermante", "ParentheseOuvrante", 
			"ParentheseFermante", "CrochetOuvrant", "CrochetFermant", "Point", "PointInterrogation", 
			"DeuxPoint", "Virgule", "PointVirgule", "Afficher", "Si", "Sinon", "Retour", 
			"TantQue", "Nouveau", "Classe", "Herite", "Public", "Prive", "DeClasse", 
			"Definitif", "Moi", "Super", "MethodePrincipale", "Abstrait", "Protege", 
			"Asterisque", "Oblique", "PourCent", "Plus", "Moins", "DoubleBarre", 
			"DoubleEsperluette", "PointExclamation", "Inferieur", "Superieur", "InferieurEgal", 
			"SuperieurEgal", "DoubleEgal", "ExclamationEgal", "Esperluette", "TypeEntier", 
			"TypeFlottant", "TypeBooleen", "TypeCaractere", "TypeChaine", "TypeVide", 
			"Vrai", "Faux", "Nul", "Caractere", "Chaine", "Underscore", "Identificateur", 
			"Entier", "Flottant", "CommentaireLigne", "CommentaireBloc", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniJavaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniJavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgrammeContext extends ParserRuleContext {
		public ClassesContext lesClasses;
		public PrincipaleContext laPrincipale;
		public ClassesContext classes() {
			return getRuleContext(ClassesContext.class,0);
		}
		public PrincipaleContext principale() {
			return getRuleContext(PrincipaleContext.class,0);
		}
		public ProgrammeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).enterProgramme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).exitProgramme(this);
		}
	}

	public final ProgrammeContext programme() throws RecognitionException {
		ProgrammeContext _localctx = new ProgrammeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programme);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			((ProgrammeContext)_localctx).lesClasses = classes();
			setState(45);
			((ProgrammeContext)_localctx).laPrincipale = principale();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassesContext extends ParserRuleContext {
		public List<ClassDeclaration> desClasses;
		public ClasseContext classe;
		public List<ClasseContext> lesClasses = new ArrayList<ClasseContext>();
		public List<ClasseContext> classe() {
			return getRuleContexts(ClasseContext.class);
		}
		public ClasseContext classe(int i) {
			return getRuleContext(ClasseContext.class,i);
		}
		public ClassesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).enterClasses(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).exitClasses(this);
		}
	}

	public final ClassesContext classes() throws RecognitionException {
		ClassesContext _localctx = new ClassesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Classe || _la==Abstrait) {
				{
				{
				setState(47);
				((ClassesContext)_localctx).classe = classe();
				((ClassesContext)_localctx).lesClasses.add(((ClassesContext)_localctx).classe);
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClasseContext extends ParserRuleContext {
		public ClassDeclaration uneClasse;
		public Token estAbstraite;
		public Token leNom;
		public Token heriteDe;
		public ElementsContext lesElements;
		public TerminalNode Classe() { return getToken(MiniJavaParser.Classe, 0); }
		public TerminalNode AccoladeOuvrante() { return getToken(MiniJavaParser.AccoladeOuvrante, 0); }
		public TerminalNode AccoladeFermante() { return getToken(MiniJavaParser.AccoladeFermante, 0); }
		public List<TerminalNode> Identificateur() { return getTokens(MiniJavaParser.Identificateur); }
		public TerminalNode Identificateur(int i) {
			return getToken(MiniJavaParser.Identificateur, i);
		}
		public ElementsContext elements() {
			return getRuleContext(ElementsContext.class,0);
		}
		public TerminalNode Herite() { return getToken(MiniJavaParser.Herite, 0); }
		public TerminalNode Abstrait() { return getToken(MiniJavaParser.Abstrait, 0); }
		public ClasseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).enterClasse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).exitClasse(this);
		}
	}

	public final ClasseContext classe() throws RecognitionException {
		ClasseContext _localctx = new ClasseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classe);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Abstrait) {
				{
				setState(53);
				((ClasseContext)_localctx).estAbstraite = match(Abstrait);
				}
			}

			setState(56);
			match(Classe);
			setState(57);
			((ClasseContext)_localctx).leNom = match(Identificateur);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Herite) {
				{
				setState(58);
				match(Herite);
				setState(59);
				((ClasseContext)_localctx).heriteDe = match(Identificateur);
				}
			}

			setState(62);
			match(AccoladeOuvrante);
			setState(63);
			((ClasseContext)_localctx).lesElements = elements();
			setState(64);
			match(AccoladeFermante);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrincipaleContext extends ParserRuleContext {
		public MainDeclaration unPrincipal;
		public Token leNom;
		public DeclarationContext declaration;
		public List<DeclarationContext> lesDeclarations = new ArrayList<DeclarationContext>();
		public BlocContext leCorps;
		public List<TerminalNode> Public() { return getTokens(MiniJavaParser.Public); }
		public TerminalNode Public(int i) {
			return getToken(MiniJavaParser.Public, i);
		}
		public TerminalNode Classe() { return getToken(MiniJavaParser.Classe, 0); }
		public TerminalNode AccoladeOuvrante() { return getToken(MiniJavaParser.AccoladeOuvrante, 0); }
		public TerminalNode DeClasse() { return getToken(MiniJavaParser.DeClasse, 0); }
		public TerminalNode TypeVide() { return getToken(MiniJavaParser.TypeVide, 0); }
		public TerminalNode MethodePrincipale() { return getToken(MiniJavaParser.MethodePrincipale, 0); }
		public TerminalNode ParentheseOuvrante() { return getToken(MiniJavaParser.ParentheseOuvrante, 0); }
		public TerminalNode TypeChaine() { return getToken(MiniJavaParser.TypeChaine, 0); }
		public TerminalNode CrochetOuvrant() { return getToken(MiniJavaParser.CrochetOuvrant, 0); }
		public TerminalNode CrochetFermant() { return getToken(MiniJavaParser.CrochetFermant, 0); }
		public List<TerminalNode> Identificateur() { return getTokens(MiniJavaParser.Identificateur); }
		public TerminalNode Identificateur(int i) {
			return getToken(MiniJavaParser.Identificateur, i);
		}
		public TerminalNode ParentheseFermante() { return getToken(MiniJavaParser.ParentheseFermante, 0); }
		public TerminalNode AccoladeFermante() { return getToken(MiniJavaParser.AccoladeFermante, 0); }
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public PrincipaleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_principale; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).enterPrincipale(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).exitPrincipale(this);
		}
	}

	public final PrincipaleContext principale() throws RecognitionException {
		PrincipaleContext _localctx = new PrincipaleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_principale);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(Public);
			setState(67);
			match(Classe);
			setState(68);
			((PrincipaleContext)_localctx).leNom = match(Identificateur);
			setState(69);
			match(AccoladeOuvrante);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DeClasse) {
				{
				{
				setState(70);
				((PrincipaleContext)_localctx).declaration = declaration();
				((PrincipaleContext)_localctx).lesDeclarations.add(((PrincipaleContext)_localctx).declaration);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(Public);
			setState(77);
			match(DeClasse);
			setState(78);
			match(TypeVide);
			setState(79);
			match(MethodePrincipale);
			setState(80);
			match(ParentheseOuvrante);
			setState(81);
			match(TypeChaine);
			setState(82);
			match(CrochetOuvrant);
			setState(83);
			match(CrochetFermant);
			setState(84);
			match(Identificateur);
			setState(85);
			match(ParentheseFermante);
			setState(86);
			((PrincipaleContext)_localctx).leCorps = bloc();
			setState(87);
			match(AccoladeFermante);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public Declaration uneDeclaration;
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
			this.uneDeclaration = ctx.uneDeclaration;
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MethodeMainContext extends DeclarationContext {
		public SignatureContext laSignature;
		public BlocContext leCorps;
		public TerminalNode DeClasse() { return getToken(MiniJavaParser.DeClasse, 0); }
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public MethodeMainContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).enterMethodeMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).exitMethodeMain(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AttributMainContext extends DeclarationContext {
		public Token estDefinitif;
		public TypeContext leType;
		public Token leNom;
		public ExpressionContext laValeur;
		public TerminalNode DeClasse() { return getToken(MiniJavaParser.DeClasse, 0); }
		public TerminalNode Egal() { return getToken(MiniJavaParser.Egal, 0); }
		public TerminalNode PointVirgule() { return getToken(MiniJavaParser.PointVirgule, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identificateur() { return getToken(MiniJavaParser.Identificateur, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Definitif() { return getToken(MiniJavaParser.Definitif, 0); }
		public AttributMainContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).enterAttributMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).exitAttributMain(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		int _la;
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new MethodeMainContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(DeClasse);
				setState(90);
				((MethodeMainContext)_localctx).laSignature = signature();
				setState(91);
				((MethodeMainContext)_localctx).leCorps = bloc();
				}
				break;
			case 2:
				_localctx = new AttributMainContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(DeClasse);
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Definitif) {
					{
					setState(94);
					((AttributMainContext)_localctx).estDefinitif = match(Definitif);
					}
				}

				setState(97);
				((AttributMainContext)_localctx).leType = type(0);
				setState(98);
				((AttributMainContext)_localctx).leNom = match(Identificateur);
				setState(99);
				match(Egal);
				setState(100);
				((AttributMainContext)_localctx).laValeur = expression(0);
				setState(101);
				match(PointVirgule);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementsContext extends ParserRuleContext {
		public List<ClassElement> desElements;
		public ElementContext element;
		public List<ElementContext> lesElements = new ArrayList<ElementContext>();
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public ElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).enterElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).exitElements(this);
		}
	}

	public final ElementsContext elements() throws RecognitionException {
		ElementsContext _localctx = new ElementsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_elements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 543162368L) != 0)) {
				{
				{
				setState(105);
				((ElementsContext)_localctx).element = element();
				((ElementsContext)_localctx).lesElements.add(((ElementsContext)_localctx).element);
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AccessRightContext extends ParserRuleContext {
		public AccessRight unDroit;
		public TerminalNode Public() { return getToken(MiniJavaParser.Public, 0); }
		public TerminalNode Protege() { return getToken(MiniJavaParser.Protege, 0); }
		public TerminalNode Prive() { return getToken(MiniJavaParser.Prive, 0); }
		public AccessRightContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accessRight; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).enterAccessRight(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaParserListener ) ((MiniJavaParserListener)listener).exitAccessRight(this);
		}
	}

	public final AccessRightContext accessRight() throws RecognitionException {
		AccessRightContext _localctx = new AccessRightContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_accessRight);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 543162368L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
